--- a/Apps/HelloWorld.html
+++ b/Apps/HelloWorld.html
@@ -21,11 +21,11 @@
   <script>
     var viewer = new Cesium.Viewer('cesiumContainer');
 
-    viewer.dataSources.add(Cesium.KmlDataSource.load("./KML/候補物件.kmz"));
+    viewer.dataSources.add(Cesium.KmlDataSource.load("../KML/候補物件.kmz"));
 
-    viewer.dataSources.add(Cesium.KmlDataSource.load("./KML/フェリー.kmz"));
+    viewer.dataSources.add(Cesium.KmlDataSource.load("../KML/フェリー.kmz"));
 
-    viewer.dataSources.add(Cesium.KmlDataSource.load("./KML/地質図３D.kmz"));
+    viewer.dataSources.add(Cesium.KmlDataSource.load("../KML/地質図３D.kmz"));
 
   </script>
 </body>
