--- a/Apps/HelloWorld.html
+++ b/Apps/HelloWorld.html
@@ -27,6 +27,8 @@
 
     viewer.dataSources.add(Cesium.KmlDataSource.load("../KML/地質図３D.kmz"));
 
+    viewer.dataSources.add(Cesium.KmlDataSource.load("../KML/MackyBldg.kmz"));
+
   </script>
 </body>
 </html>
