--- a/Apps/HelloWorld.html
+++ b/Apps/HelloWorld.html
@@ -18,6 +18,8 @@
 </head>
 <body>
   <div id="cesiumContainer"></div>
+  <div id="loadingOverlay"><h1>Loading...</h1></div>
+  <div id="toolbar"></div>
   <script>
     
     var viewer = new Cesium.Viewer('cesiumContainer', {
