--- a/Apps/HelloWorld.html
+++ b/Apps/HelloWorld.html
@@ -9,92 +9,155 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
   <title>Hello World!</title>
   <script src="../Build/Cesium/Cesium.js"></script>
-  <style>
-      @import url(../Build/Cesium/Widgets/widgets.css);
-      html, body, #cesiumContainer {
-          width: 100%; height: 100%; margin: 0; padding: 0; overflow: hidden;
-      }
-  </style>
+<style>
+    @import url(../templates/bucket.css);
+</style>
+<div id="cesiumContainer" class="fullSize"></div>
+<div id="loadingOverlay"><h1>Loading...</h1></div>
+<div id="toolbar">
+    <table class="infoPanel">
+        <tbody>
+        <tr>
+            <td>Click on the Cesium display to start.</td>
+        </tr>
+        <tr>
+            <td>w/s - move forward/backward</td>
+        </tr>
+        <tr>
+            <td>a/d - move left/right</td>
+        </tr>
+        <tr>
+            <td>q/e - move up/down</td>
+        </tr>
+        <tr>
+            <td>left mouse button down plus mouse move changes the look direction</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
 </head>
 <body>
   <div id="cesiumContainer"></div>
-  <div id="loadingOverlay"><h1>Loading...</h1></div>
-  <div id="toolbar"></div>
   <script>
     
-    var viewer = new Cesium.Viewer('cesiumContainer', {
-    infoBox : false,
-    selectionIndicator : false,
-    shadows : true,
-    shouldAnimate : true
-});
+    var viewer = new Cesium.Viewer('cesiumContainer');
 
-    viewer.dataSources.add(Cesium.KmlDataSource.load("../KML/候補物件.kmz"));
+var scene = viewer.scene;
+var canvas = viewer.canvas;
+canvas.setAttribute('tabindex', '0'); // needed to put focus on the canvas
+canvas.onclick = function() {
+    canvas.focus();
+};
+var ellipsoid = scene.globe.ellipsoid;
 
-    viewer.dataSources.add(Cesium.KmlDataSource.load("../KML/フェリー.kmz"));
+// disable the default event handlers
+scene.screenSpaceCameraController.enableRotate = false;
+scene.screenSpaceCameraController.enableTranslate = false;
+scene.screenSpaceCameraController.enableZoom = false;
+scene.screenSpaceCameraController.enableTilt = false;
+scene.screenSpaceCameraController.enableLook = false;
 
-    viewer.dataSources.add(Cesium.KmlDataSource.load("../KML/地質図３D.kmz"));
+var startMousePosition;
+var mousePosition;
+var flags = {
+    looking : false,
+    moveForward : false,
+    moveBackward : false,
+    moveUp : false,
+    moveDown : false,
+    moveLeft : false,
+    moveRight : false
+};
 
-    viewer.dataSources.add(Cesium.KmlDataSource.load("../KML/MackyBldg.kmz"));
+var handler = new Cesium.ScreenSpaceEventHandler(canvas);
 
+handler.setInputAction(function(movement) {
+    flags.looking = true;
+    mousePosition = startMousePosition = Cesium.Cartesian3.clone(movement.position);
+}, Cesium.ScreenSpaceEventType.LEFT_DOWN);
 
+handler.setInputAction(function(movement) {
+    mousePosition = movement.endPosition;
+}, Cesium.ScreenSpaceEventType.MOUSE_MOVE);
 
-function createModel(url, height) {
-    viewer.entities.removeAll();
+handler.setInputAction(function(position) {
+    flags.looking = false;
+}, Cesium.ScreenSpaceEventType.LEFT_UP);
 
-    var position = Cesium.Cartesian3.fromDegrees(-123.0744619, 44.0503706, height);
-    var heading = Cesium.Math.toRadians(135);
-    var pitch = 0;
-    var roll = 0;
-    var hpr = new Cesium.HeadingPitchRoll(heading, pitch, roll);
-    var orientation = Cesium.Transforms.headingPitchRollQuaternion(position, hpr);
-
-    var entity = viewer.entities.add({
-        name : url,
-        position : position,
-        orientation : orientation,
-        model : {
-            uri : url,
-            minimumPixelSize : 128,
-            maximumScale : 20000
-        }
-    });
-    viewer.trackedEntity = entity;
+function getFlagForKeyCode(keyCode) {
+    switch (keyCode) {
+    case 'W'.charCodeAt(0):
+        return 'moveForward';
+    case 'S'.charCodeAt(0):
+        return 'moveBackward';
+    case 'Q'.charCodeAt(0):
+        return 'moveUp';
+    case 'E'.charCodeAt(0):
+        return 'moveDown';
+    case 'D'.charCodeAt(0):
+        return 'moveRight';
+    case 'A'.charCodeAt(0):
+        return 'moveLeft';
+    default:
+        return undefined;
+    }
 }
 
-var options = [{
-    text : 'Aircraft',
-    onselect : function() {
-        createModel('../SampleData/models/CesiumAir/Cesium_Air.glb', 5000.0);
+document.addEventListener('keydown', function(e) {
+    var flagName = getFlagForKeyCode(e.keyCode);
+    if (typeof flagName !== 'undefined') {
+        flags[flagName] = true;
     }
-}, {
-    text : 'Ground Vehicle',
-    onselect : function() {
-        createModel('../SampleData/models/GroundVehicle/GroundVehicle.glb', 0);
-    }
-}, {
-    text : 'Hot Air Balloon',
-    onselect : function() {
-        createModel('../SampleData/models/CesiumBalloon/CesiumBalloon.glb', 1000.0);
-    }
-}, {
-    text : 'Milk Truck',
-    onselect : function() {
-        createModel('../SampleData/models/CesiumMilkTruck/CesiumMilkTruck.glb', 0);
-    }
-}, {
-    text : 'Skinned Character',
-    onselect : function() {
-        createModel('../SampleData/models/CesiumMan/Cesium_Man.glb', 0);
-    }
-}, {
-    text : 'Draco Compressed Model',
-    onselect : function() {
-        createModel('../SampleData/models/DracoCompressed/CesiumMilkTruck.gltf', 0);
-    }
-}];
+}, false);
 
-Sandcastle.addToolbarMenu(options);
+document.addEventListener('keyup', function(e) {
+    var flagName = getFlagForKeyCode(e.keyCode);
+    if (typeof flagName !== 'undefined') {
+        flags[flagName] = false;
+    }
+}, false);
+
+viewer.clock.onTick.addEventListener(function(clock) {
+    var camera = viewer.camera;
+
+    if (flags.looking) {
+        var width = canvas.clientWidth;
+        var height = canvas.clientHeight;
+
+        // Coordinate (0.0, 0.0) will be where the mouse was clicked.
+        var x = (mousePosition.x - startMousePosition.x) / width;
+        var y = -(mousePosition.y - startMousePosition.y) / height;
+
+        var lookFactor = 0.05;
+        camera.lookRight(x * lookFactor);
+        camera.lookUp(y * lookFactor);
+    }
+
+    // Change movement speed based on the distance of the camera to the surface of the ellipsoid.
+    var cameraHeight = ellipsoid.cartesianToCartographic(camera.position).height;
+    var moveRate = cameraHeight / 100.0;
+
+    if (flags.moveForward) {
+        camera.moveForward(moveRate);
+    }
+    if (flags.moveBackward) {
+        camera.moveBackward(moveRate);
+    }
+    if (flags.moveUp) {
+        camera.moveUp(moveRate);
+    }
+    if (flags.moveDown) {
+        camera.moveDown(moveRate);
+    }
+    if (flags.moveLeft) {
+        camera.moveLeft(moveRate);
+    }
+    if (flags.moveRight) {
+        camera.moveRight(moveRate);
+    }
+});
+
 
 
 
