--- a/Apps/HelloWorld.html
+++ b/Apps/HelloWorld.html
@@ -10,7 +10,7 @@
   <title>Hello World!</title>
   <script src="../Build/Cesium/Cesium.js"></script>
 <style>
-    @import url(../templates/bucket.css);
+    @import url(./Sandcastle/templates/bucket.css);
 </style>
 <div id="cesiumContainer" class="fullSize"></div>
 <div id="loadingOverlay"><h1>Loading...</h1></div>
