--- a/Apps/HelloWorld.html
+++ b/Apps/HelloWorld.html
@@ -42,7 +42,8 @@
   <script>
     
 
-// Grant CesiumJS access to your ion assets
+
+// 地質図
 Cesium.Ion.defaultAccessToken = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI2ZWI3OWU3Zi1iMDdmLTRmZmYtYmQ4Mi1kMjk3MGZjYjhmY2QiLCJpZCI6MjY1NzEsInNjb3BlcyI6WyJhc3IiLCJnYyJdLCJpYXQiOjE1ODc5NjQ1NDh9.mGpF-Lm3RGAeclWcHHdw17YEIdPPLy56vt4rJVaGwmU";
 
 var viewer = new Cesium.Viewer("cesiumContainer");
@@ -56,6 +57,23 @@ var tileset = viewer.scene.primitives.add(
 viewer.zoomTo(tileset).otherwise(function (error) {
   console.log(error);
 });
+
+
+// 棒グラフ
+Cesium.Ion.defaultAccessToken = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI2ZWI3OWU3Zi1iMDdmLTRmZmYtYmQ4Mi1kMjk3MGZjYjhmY2QiLCJpZCI6MjY1NzEsInNjb3BlcyI6WyJhc3IiLCJnYyJdLCJpYXQiOjE1ODc5NjQ1NDh9.mGpF-Lm3RGAeclWcHHdw17YEIdPPLy56vt4rJVaGwmU";
+
+var viewer = new Cesium.Viewer("cesiumContainer");
+
+var tileset = viewer.scene.primitives.add(
+  new Cesium.Cesium3DTileset({
+    url: Cesium.IonResource.fromAssetId(94760),
+  })
+);
+
+viewer.zoomTo(tileset).otherwise(function (error) {
+  console.log(error);
+});
+
 
 
 
