--- a/Apps/HelloWorld.html
+++ b/Apps/HelloWorld.html
@@ -19,9 +19,16 @@
 
 </head>
 <body>
-  <div id="cesiumContainer"></div>
+
+
   <script>
-    
+
+var viewer = new Cesium.Viewer('cesiumContainer');
+var options = {
+    camera : viewer.scene.camera,
+    canvas : viewer.scene.canvas
+};
+
 Sandcastle.addToolbarMenu([{
     text : 'KML - Global Science Facilities',
     onselect : function() {
