--- a/Apps/HelloWorld.html
+++ b/Apps/HelloWorld.html
@@ -11,9 +11,27 @@
   <script src="../Build/Cesium/Cesium.js"></script>
 <style>
     @import url(./Sandcastle/templates/bucket.css);
+
+    html, body, #cesiumContainer {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+ 
+        .toolbar-left {
+            display: block;
+            position: absolute;
+            top: 5px;
+            left: 5px;
+        }
 </style>
 <div id="cesiumContainer" class="fullSize"></div>
 <div id="loadingOverlay"><h1>Loading...</h1></div>
+<div class="toolbar-left">
+    <button onclick="alert('You clicked!');">Click me!</button>
+    </div>
 <div id="toolbar"></div>
 
 
@@ -23,51 +41,14 @@
 
   <script>
 
-var viewer = new Cesium.Viewer('cesiumContainer');
-var options = {
-    camera : viewer.scene.camera,
-    canvas : viewer.scene.canvas
-};
-
-Sandcastle.addToolbarMenu([{
-    text : 'KML - Global Science Facilities',
-    onselect : function() {
-        viewer.camera.flyHome(0);
-        viewer.dataSources.add(Cesium.KmlDataSource.load('../SampleData/kml/facilities/facilities.kml', options));
-    }
-}, {
-    text : 'KMZ with embedded data - GDP per capita',
-    onselect : function() {
-        viewer.camera.flyHome(0);
-        viewer.dataSources.add(Cesium.KmlDataSource.load('../SampleData/kml/gdpPerCapita2008.kmz', options));
-    }
-}, {
-    text : 'gx KML extensions - Bike Ride',
-    onselect : function() {
-        viewer.dataSources.add(Cesium.KmlDataSource.load('../SampleData/kml/bikeRide.kml', options)).then(function(dataSource){
-            viewer.clock.shouldAnimate = false;
-            var rider = dataSource.entities.getById('tour');
-            viewer.flyTo(rider).then(function(){
-                viewer.trackedEntity = rider;
-                viewer.selectedEntity = viewer.trackedEntity;
-                viewer.clock.multiplier = 30;
-                viewer.clock.shouldAnimate = true;
-            });
-        });
-    }
-}], 'toolbar');
-
-Sandcastle.reset = function() {
-    viewer.dataSources.removeAll();
-    viewer.clock.clockRange = Cesium.ClockRange.UNBOUNDED;
-    viewer.clock.clockStep = Cesium.ClockStep.SYSTEM_CLOCK;
-};
-
-
 // 棒グラフ
 Cesium.Ion.defaultAccessToken = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI2ZWI3OWU3Zi1iMDdmLTRmZmYtYmQ4Mi1kMjk3MGZjYjhmY2QiLCJpZCI6MjY1NzEsInNjb3BlcyI6WyJhc3IiLCJnYyJdLCJpYXQiOjE1ODc5NjQ1NDh9.mGpF-Lm3RGAeclWcHHdw17YEIdPPLy56vt4rJVaGwmU";
 
 var viewer = new Cesium.Viewer("cesiumContainer");
+var options = {
+    camera : viewer.scene.camera,
+    canvas : viewer.scene.canvas
+};
 
 var tileset = viewer.scene.primitives.add(
   new Cesium.Cesium3DTileset({
@@ -75,10 +56,15 @@ var tileset = viewer.scene.primitives.add(
   })
 );
 
+var tileset = viewer.scene.primitives.add(
+  new Cesium.Cesium3DTileset({
+    url: Cesium.IonResource.fromAssetId(94741),
+  })
+);
+
 viewer.zoomTo(tileset).otherwise(function (error) {
   console.log(error);
 });
-
 
 
 
